<resources>
    <string name="app_name">SmartHome</string>
    <string name="profile_page_btn">Profile Page</string>
    <string name="main_log_in_btn">Log In</string>
    <string name="welcome_to_smart_home_txt">Welcome to Smart home group project.</string>
    <string name="username_txt">Username</string>
    <string name="user_email_txt">Email@email.com</string>
    <string name="change_username_btn">Change Username</string>
    <string name="change_email_btn">Change Email</string>
    <string name="change_password_btn">Change Password</string>
    <string name="delete_account_btn">Delete Account</string>
    <string name="log_out_btn">Log Out</string>
    <string name="user_icon">User Icon</string>
    <string name="change_icon_btn">Change Icon</string>
    <string name="update_username_txt">Update Username</string>
    <string name="update_email_txt">Update Email</string>
    <string name="email_txt">Email</string>
    <string name="update_password_txt">Update Password</string>
    <string name="password_label">Password</string>
    <string name="password_txt">Password</string>
    <string name="update_btn">Update</string>
    <string name="create_account_lbl">Create Account</string>
    <string name="forgot_password_lbl">Forgot Password</string>
    <string name="reset_password_btn">Reset Password</string>
    <string name="create_account_btn">Create Account</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="nav_log_out">Are you sure, you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="latLbl">Latitude:</string>
    <string name="lonLbl">Longitude:</string>
    <string name="latTxt"></string>
    <string name="lonTxt"></string>
    <string name="locationLbl">Your Location</string>
    <string name="locateBtn">Get Location</string>

    <!--    Initilize help lists -->
    <string-array name="HelpList">
        <item>Click on signup page from home page or profile page.</item>
        <item>Then, login to your profile.</item>
        <item>Then, go to devices from navbar on left.</item>
        <item>Then you can costomize your devices.</item>
    </string-array>

    <string-array name="device_type">
        <item>Select</item>
        <item>Power</item>
        <item>Wiring Accessories</item>
        <item>Lighting</item>
        <item>Climate</item>
        <item>Security</item>
        <item>Blinds</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>