<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/username_txt"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/user_email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/user_email_txt"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/chngUsr"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/change_username_btn"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/chngEm"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/change_email_btn"
                android:textAllCaps="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/chngPass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/change_password_btn"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/delAcc"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/delete_account_btn"
                android:textAllCaps="true" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>