<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".LogInPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/color2"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/UsernameLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/color3"
            android:ems="10"
            android:hint="@string/username_txt"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:id="@+id/PasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/color3"
            android:ems="10"
            android:hint="@string/password_txt"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/hintColor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dont have an account? "
                android:textColor="@color/color3" />

            <TextView
                android:id="@+id/CreateAccountLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="makeAccount"
                android:text="@string/create_account_lbl"
                android:textColor="@color/color3"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password? "
                android:textColor="@color/color3" />

            <TextView
                android:id="@+id/ForgotPasswordLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="forgot"
                android:text="@string/forgot_password_lbl"
                android:textColor="@color/color3"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/LogInBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/color4"
            android:onClick="logIn"
            android:text="@string/main_log_in_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>