<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/color2"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/UsernameLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/color3"
            android:ems="10"
            android:hint="@string/username_txt"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/color3"
            android:ems="10"
            android:hint="@string/email_txt"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:id="@+id/PasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/color3"
            android:ems="10"
            android:hint="@string/password_txt"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/hintColor" />

        <Button
            android:id="@+id/CreateBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/color4"
            android:onClick="createAccount"
            android:text="@string/create_account_btn" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>